Closed Bug 651926 Opened 15 years ago Closed 15 years ago

gfxPlatform::Init needs to crash rather than returning an error if it fails

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
firefox6 + fixed

People

(Reporter: zwol, Assigned: zwol)

References

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

+++ This bug was initially created as a clone of Bug #651498 +++ > As a side note, gfxPlatform::Init ought to crash rather than returning an error > code -- even in production builds -- if anything fails to start up, because > nothing checks for a null pointer return from gfxPlatform::GetPlatform, so > we're going to crash anyway. But this was already broken, so I think it should > get its own bug.
Attached patch patch (obsolete) — Splinter Review
Thus. Some of these may already be covered by infallible malloc but I don't feel like auditing them just now.
Attachment #527595 - Flags: review?(joe)
Comment on attachment 527595 [details] [diff] [review] patch Yes please.
Attachment #527595 - Flags: review?(joe) → review+
This is done and bug 651498 isn't, so I'm switching the dependency around so this can land (it's only a textual dependency).
Blocks: 651498
No longer depends on: 651498
only change is to remove said textual dependency.
Attachment #527595 - Attachment is obsolete: true
Attachment #528043 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Mozilla/5.0 (X11; Linux x86_64; rv:6.0) Gecko/20100101 Firefox/6.0 Could you please provide a test case for this issue in order for it to be set to verified Fixed?
This changed how promptly we crash under conditions that should never actually occur. I do not believe a test case is feasible.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: