Bug 651926: abort (even in production) if anything in gfxPlatform::Init fails, its callers can't cope. r=jrmuizel